--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
         <div class="headingbar">
           <button class="downloadbutton">Download App</button>
           <p class="headingbartext">Download App to Unlock More Benefits. </p>
-            <img src="photos/realmeicon.png" alt="" class="iconimg">
-            <img src="photos/remove.png" alt="" class="cross">
+            <img src="realmeicon.png" alt="" class="iconimg">
+            <img src="remove.png" alt="" class="cross">
             
         </div>
 
@@ -438,3 +438,4 @@
     </div>
   </body>
 </html>
+
